added action to search algolia for related issue

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -24,8 +24,13 @@ jobs:
   relatedSearch:
     runs-on: ubuntu-latest
     steps:
-      - name: hello world
-        run: echo "hello World"
+      - name: Search based on issue title
+        uses: brob/algolia-issue-search@1.0
+        with:
+          app_id: ${{ secrets.ALGOLIA_APP_ID }}
+          api_key: ${{ secrets.ALGOLIA_API_KEY }}
+          index_name: ${{ github.event.repository.name }}
+          issue_title: ${{ github.event.issue.title }}
   commentIssue:
     runs-on: ubuntu-latest
     permissions:
