updated the event, and added a message template
added reopened issue event as trigger, and added template for the
message to be published in PUB/SUB

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,7 +2,7 @@ name: Github Issue Tracker
 
 on:
   issues:
-    types: [opened, edited]
+    types: [opened, edited, reopened]
 
 jobs:
   labeling:
@@ -74,4 +74,15 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           topic_name: "projects/github-issue-tracker-418618/topics/github-issue-tracker"
-          message: "Hello world!"
+          message: |- # Template literal for multi-line strings
+            {
+              "title": "${{ github.event.issue.title }}",
+              "url": "${{ github.event.issue.html_url }}",
+              "state": "${{ github.event.issue.state }}",
+              "created_by": "${{ github.event.issue.user.login }}",
+              "labels": [  # Loop through labels array
+                {% for label in github.event.issue.labels %}
+                  { "name": "{{ label.name }}", "id": "{{ label.id }}" },
+                {% endfor %}
+              ]
+            }
