--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -80,9 +80,8 @@ jobs:
               "url": "${{ github.event.issue.html_url }}",
               "state": "${{ github.event.issue.state }}",
               "created_by": "${{ github.event.issue.user.login }}",
-              "labels": [  # Loop through labels array
+              "labels":  # Use a colon (:) to start the list
                 {% for label in github.event.issue.labels %}
-                  { "name": "{{ label.name }}", "id": "{{ label.id }}" },
+                - { "name": "{{ label.name }}", "id": "{{ label.id }}" }  # Use indentation
                 {% endfor %}
-              ]
             }
