updated the template

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -80,8 +80,5 @@ jobs:
               "url": "${{ github.event.issue.html_url }}",
               "state": "${{ github.event.issue.state }}",
               "created_by": "${{ github.event.issue.user.login }}",
-              "labels":  # Use a colon (:) to start the list
-                {% for label in github.event.issue.labels %}
-                - { "name": "{{ label.name }}", "id": "{{ label.id }}" }  # Use indentation
-                {% endfor %}
+              "labels": "{{ join(',', github.event.issue.labels.*.name) }}"
             }
